# TensorMill

./: ARCHITECTURE.md  Cargo.toml  README.md  TUTORIAL.md
docs/: INSTALL.md
src/: config.rs  error.rs  generator.rs  lib.rs  main.rs  metadata.rs  mxfp4.rs  sharding.rs  tensor.rs
tests/: integration_tests.rs  mxfp4_tests.rs  tensor_tests.rs
