[package]
name = "tensormill"
version = "0.1.0"
edition = "2021"
authors = ["TensorMill Contributors"]
description = "Industrial-strength synthetic tensor generation for ML pipelines"
repository = "https://github.com/example/tensormill"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "synthetic", "weights", "machine-learning", "safetensors"]
categories = ["science", "simulation", "command-line-utilities"]

[dependencies]
# Core dependencies
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"
half = { version = "2.3", features = ["std", "num-traits"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Performance
bytemuck = "1.14"
memmap2 = "0.9"

# Optional: Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"
pretty_assertions = "1.4"
approx = "0.5"

[features]
default = []
python = ["pyo3"]
benchmark = []

[[bin]]
name = "tensormill"
path = "src/main.rs"

# Benchmarks can be added later
# [[bench]]
# name = "generation_benchmark"
# harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"